--- a/A2-Wer.ipynb
+++ b/A2-Wer.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please describe the format of the data files. Can you identify any  limitations or distortions of the data?"
+    "# Please describe the format of the data files. Can you identify any  limitations or distortions of the data?"
    ]
   },
   {
@@ -655,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the most popular name of all time? (Of either gender.)  It looks like James is the most popular among either genders"
+    "# What is the most popular name of all time? (Of either gender.)  It looks like James is the most popular among either genders"
    ]
   },
   {
@@ -708,14 +708,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the most gender ambiguous name in 2013? 1945?"
+    "# What is the most gender ambiguous name in 2013? 1945?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most ambiguous names in 2013 were more than a couple of them , Arlin ,Cree,Devine "
+    "Most ambiguous names in 2013 were more than a couple of them , Arlin ,Cree,Devine ..."
    ]
   },
   {
@@ -806,13 +806,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Of the names represented in the data, find the name that has had the largest percentage increase in popularity since 1980. Largest decrease?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data_1980"
+   ]
   }
  ],
  "metadata": {
