--- a/A2-Wer.ipynb
+++ b/A2-Wer.ipynb
@@ -822,6 +822,51 @@
    "source": [
     "data_1980"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Besides the analysis above, do you discovery any interesting insights from the dataset?  This is an open ended question. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The average lenght of baby names seems to be between 5-6 letters through time. There is a rise in the length of names until ~1990 after which we see a sharp decline up to the present times\n",
+    "\n",
+    "An immigration act in 1924 restricted the influx of immigrants - and enforced a quota system for immigrants for different countries.The global depression combined with WW2 saw a decline in immigration and hence the number of new names.\n",
+    "\n",
+    "In 1965  Congress passed the Immigration and Nationality Act and since then we see a rapid rise in the number of new names year-on-year! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
