--- a/A1_wer.ipynb
+++ b/A1_wer.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Light points are original values while dark points are projected version. "
+    "# Light points are original values while dark points are projected version. It appears that due to dimensionality we are losing more information (information loss ) there by impacting the model performance. "
    ]
   },
   {
