--- a/A2-Wer.ipynb
+++ b/A2-Wer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,9 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
        "Name: 4, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
        "Name: Count, dtype: float64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,7 @@
        "Name: Count, dtype: float64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -307,38 +307,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* slecting names from 2017 which were also present in 1980 dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "Total_2017=sum(data_2017.groupby('Name').sum()['Count'])"
+    "common_data_2017=data_2017[data_2017['Name'].isin (data_1980['Name'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Total_2017=sum(common_data_2017.groupby('Name').sum()['Count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "percentages_2017=data_2017.groupby('Name').sum()['Count'].sort_values()/Total_2017"
+    "percentages_2017=common_data_2017.groupby('Name').sum()['Count'].sort_values()/Total_2017"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*This is a naive way to get the calculation . I should have checked whether names in 2017 exists in 1980 and then do this\n",
-    "calculation on the subset.*"
+    "# Highest percentage increase : Emma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -347,17 +364,48 @@
      "data": {
       "text/plain": [
        "Name\n",
-       "Emma    0.006447\n",
+       "Emma    0.008477\n",
        "Name: Count, dtype: float64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(percentages_2017-percentages_1980).sort_values(ascending=False).head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Highest percentage decrease :Jennifer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name\n",
+       "Jennifer   -0.01825\n",
+       "Name: Count, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(percentages_2017-percentages_1980).sort_values(ascending=True).head(1)"
    ]
   },
   {
